--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@
 
   --color-grey-light-1: #ebebec;
 
+  --color-red: #ff3b30;
+  --color-orange: #ff9500;
+  --color-green: #4cd964;
+
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
 }
@@ -261,9 +265,236 @@ img {
   }
 }
 
+/*=============== ABOUT-ME SECTION ===============*/
+.about-me-container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+}
+
+.about-me .heading-2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 4rem;
+}
 
 .card {
-  background: linear-gradient(145deg, #3e444b, #2c3035);
-  border-radius: 15%;
-  box-shadow: 9.91px 9.91px 15px #23262a, -9.91px -9.91px 15px #474e56;
+  background: #353a40;
+  border-radius: 1%;
+  box-shadow: 9.31px 9.31px 15px #26292e, -9.31px -9.31px 15px #444b52;
+  justify-self: center;
+}
+
+.card-window {
+  padding: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.circle {
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+}
+
+.c-red {
+  background-color: var(--color-red);
+}
+
+.c-orange {
+  background-color: var(--color-orange);
+}
+
+.c-green {
+  background-color: var(--color-green);
+}
+
+/* === PROFILE === */
+
+.profile {
+  /* max-width: 300px; */
+}
+
+.profile-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-img {
+  width: 50%;
+  height: 50%;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 1.5rem;
+}
+
+.profile-name {
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.profile-job {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 300;
+  color: var(--color-primary);
+  margin-bottom: 2rem;
+}
+
+.profile-desc {
+  margin: 1rem;
+}
+
+/* === HOBBIES === */
+.hobbies {
+  display: flex;
+  flex-direction: column;
+  gap: 1fr;
+}
+
+.hobbies-title {
+  margin-left: 1rem;
+  font-size: 24px;
+}
+
+.hobby {
+  margin: 1rem;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--color-primary);
+}
+
+.hobby:last-child {
+  border-bottom: none;
+}
+
+.hobby-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
+
+.hobby-desc {
+  font-weight: 400;
+}
+
+.hobby-desc span {
+  font-size: 14px;
+}
+
+.hobby-img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 12px;
+}
+
+/* === SKILLS === */
+.skills {
+  width: 100%;
+  /* max-width: 300px; */
+}
+
+.skills-wrapper {
+  margin: 1rem;
+}
+
+.skills-wrapper ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.skills-wrapper ul li {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  align-items: center;
+  gap: 1rem;
+}
+
+.skill-name {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.skill-domain {
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+
+.bar {
+  height: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  overflow: hidden;
+  box-shadow: 0 0 10px #63e6beb3;
+}
+
+.bar span {
+  height: 2px;
+  float: left;
+  background: var(--color-primary);
+}
+
+.bar-html {
+  width: 95%;
+}
+
+.bar-css {
+  width: 85%;
+}
+
+.bar-js {
+  width: 75%;
+}
+
+.bar-react {
+  width: 75%;
+}
+
+@media screen and (min-width: 582px) {
+  .about-me-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .hobbies {
+    grid-column: 2/3;
+    grid-row: 1 / span 2;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .about-me-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .hobbies {
+    grid-column: 2/-1;
+    grid-row: 1/3;
+  }
+
+  .hobbies-wrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    margin: 2rem 1rem;
+  }
+
+  .hobby {
+    margin: 0;
+    border: none;
+  }
+}
+
+/*=============== PROJECTS SECTION ===============*/
+.project {
+  min-width: 250px;
+  max-width: 300px;
+  min-height: 600px;
+  background-color: #4cd964;
 }
