--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,9 @@
   /*========== Colors ==========*/
   --color-primary: #63e6be;
 
-  --color-grey-1: #353a40;
-  --color-grey-2: #202326;
+  --color-grey-dark-1: #181a1d;
+  --color-grey-dark-2: #262a2e;
+  --color-grey-dark-3: #494e53;
 
   --color-grey-light-1: #ebebec;
 
@@ -35,7 +36,7 @@ body {
   box-sizing: border-box;
   font-family: var(--body-font);
   font-weight: 300;
-  background: var(--color-grey-1);
+  background: var(--color-grey-dark-1);
   color: var(--color-grey-light-1);
 }
 
@@ -68,6 +69,12 @@ img {
   line-height: 1.3;
 }
 
+.heading-2 {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 2.5rem;
+}
+
 @media screen and (min-width: 767px) {
   .heading-1 {
     font-size: 36px;
@@ -81,7 +88,7 @@ img {
   left: 0;
   width: 100%;
   transition: 0.4s;
-  background-color: var(--color-grey-1);
+  background-color: var(--color-grey-dark-1);
   padding: 0 0.5rem;
 }
 
@@ -244,19 +251,15 @@ img {
   padding: 1rem 2rem;
   color: var(--color-grey-light-1);
 
-  background: linear-gradient(145deg, #3f454c, #2b2f34);
-  border-radius: 1%;
-  box-shadow: 9.91px 9.91px 15px #30353a, -9.91px -9.91px 15px #3a3f46;
+  background: var(--color-primary);
+  border-radius: 4px;
 
   transition: all 0.4s ease-in-out;
 }
 
 .btn:hover,
 .btn:active {
-  color: var(--color-primary);
-  background: linear-gradient(145deg, #2d3136, #3d434a);
-  border-radius: 1%;
-  box-shadow: 9.91px 9.91px 15px #30353a, -9.91px -9.91px 15px #3a3f46;
+  transform: translateY(-3px);
 }
 
 @media screen and (min-width: 700px) {
@@ -272,16 +275,10 @@ img {
   gap: 2rem;
 }
 
-.about-me .heading-2 {
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 4rem;
-}
-
 .card {
-  background: #353a40;
-  border-radius: 1%;
-  box-shadow: 9.31px 9.31px 15px #26292e, -9.31px -9.31px 15px #444b52;
+  background: var(--color-grey-dark-2);
+  border: 1px solid var(--color-grey-dark-3);
+  border-radius: 4px;
   justify-self: center;
 }
 
@@ -312,10 +309,6 @@ img {
 }
 
 /* === PROFILE === */
-
-.profile {
-  /* max-width: 300px; */
-}
 
 .profile-content {
   display: flex;
@@ -492,9 +485,115 @@ img {
 }
 
 /*=============== PROJECTS SECTION ===============*/
+.gallery-projects ul {
+  margin-bottom: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.list-tag {
+  padding: 0.5rem 1.5rem;
+  border-radius: 4px;
+  border: 1px solid var(--color-grey-dark-3);
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.list-tag:hover {
+  box-shadow: 0 0 10px #45a185b3;
+}
+
+.list-tag.active-tag {
+  background-color: var(--color-primary);
+}
+
+.projects {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 1.5rem;
+}
+
 .project {
-  min-width: 250px;
-  max-width: 300px;
-  min-height: 600px;
-  background-color: #4cd964;
+  border-radius: 4px;
+  border: 1px solid var(--color-grey-dark-3);
+  background-color: var(--color-grey-dark-2);
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.project-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+}
+
+.project-img {
+  width: 100%;
+  border-radius: 4px;
+}
+
+.project-title {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.project-desc {
+  font-weight: 400;
+  margin-bottom: 1.5rem;
+}
+
+.project-btns {
+  display: flex;
+  gap: 1rem;
+}
+
+.btn-demo:link,
+.btn-demo:visited,
+.btn-code:link,
+.btn-code:visited {
+  border-radius: 4px;
+  padding: 0.5rem 1.5rem;
+  color: var(--color-grey-light-1);
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.btn-demo:link,
+.btn-demo:visited {
+  background: #45a185;
+  transition: all 0.4s ease-in-out;
+}
+
+.btn-demo:hover,
+.btn-demo:active {
+  transform: translateY(-3px);
+  box-shadow: 0 0 15px #45a185b3;
+  color: #fff;
+}
+
+.btn-code:link,
+.btn-code:visited {
+  transition: all 0.4s ease-in-out;
+  border: 1px solid var(--color-grey-1);
+}
+
+.btn-code:hover,
+.btn-code:active {
+  transform: translateY(-3px);
+  box-shadow: 0 0 15px #45a185b3;
+  color: #fff;
+}
+
+.hide {
+  display: none;
+}
+
+.active {
+  display: block;
 }
